# qortfolio-v2

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  apply_dashboard_patch.py  check_pytest_details.py  check_status.py  comprehensive_time_fix.py  crypto_sectors.json  current_status_tracker.md  docker-compose.yml  environment.yml  fix_crypto_collector.py  fix_test_imports.py  init-mongo.js  pyproject.toml  pytest.ini  qortfolio_v2.py  requirements-dev.txt  requirements.txt  run_comprehensive_tests.py  rxconfig.py  setup.py  test_base_collector.py  test_core_foundation.py  test_data.py  test_data_manager_no_db.py  test_mongodb_connection.py  time_bug_fix_report.md
.cursor/rules/: code-conventions.mdc  data-pipeline.mdc  database-indexing.mdc  deployment-env.mdc  development_roadmap.mdc  domain-math.mdc  project-overview.mdc  qortfolio-rules.mdc  run-instructions.mdc  security-secrets.mdc  testing-linting.mdc  ui-reflex.mdc  updated_feature_requirements.mdc
backups/time_bug_fix/: comprehensive_time_fix.py
config/: api_config.yaml  crypto_mapping.yaml  crypto_sectors.json
docker/mongodb/: init-mongo.js
docs/: compass_artifact.txt  directory.md  qortfolio_v2_features.txt  qortfolio_v2_project_files.txt  qortfolio_v2_roadmap.txt
examples/: use_financial_models.py
qortfolio_v2/: __init__.py  portfolio_state.py  qortfolio_v2.py  risk_state.py  state.py  volatility_state.py
qortfolio_v2/components/: __init__.py  navigation.py
qortfolio_v2/pages/: __init__.py  dashboard.py  options_analytics.py  portfolio.py  risk.py  risk_analytics.py  volatility.py
qortfolio_v2/utils/: export.py
scripts/: __init__.py  populate_real_market_data.py  populate_sample_data.py  setup_financial_models.py  start_realtime.py  test_mongo_async.py
src/: __init__.py
src/analytics/: __init__.py  options_processor.py  pnl_simulator.py  volatility_surface.py
src/analytics/options/: __init__.py  chain_analyzer.py
src/analytics/performance/: __init__.py  quantstats_analyzer.py
src/analytics/portfolio/: __init__.py  advanced_optimizer.py
src/analytics/risk/: __init__.py  backtesting.py  correlation_analysis.py  monte_carlo.py  portfolio_risk.py  risk_monitoring.py
src/analytics/volatility/: __init__.py  surface_builder.py  volatility_service.py
src/core/: __init__.py  config.py  exceptions.py  exeptions.py  logging.py  settings.py
src/core/config/: __init__.py  crypto_sectors.py
src/core/crypto/: crypto_sectors.py
src/core/database/: connection.py  indexes.py  models.py  operations.py
src/core/utils/: __init__.py  api_utils.py  math_utils.py  time_utils.py  validation.py
src/dashboard/: dark_theme.py  dashboard_fixes.py  dashboard_methods.py  dashboard_patch.py  main_dashboard.py
src/dashboard/pages/: options_analytics.py
src/data/: __init__.py
src/data/collectors/: __init__.py  base_collector.py  base_collector_backup.py  crypto_collector.py  crypto_collector_backup.py  data_manager.py  (+1 more)
src/qortfolio/: qortfolio.py
src/services/: __init__.py  portfolio_optimization_service.py
tests/: diagnose_deribit.py  real_options_test_results.csv  run_complete_test.sh  step_by_step_testing.py  test_advanced_portfolio_optimization.py  test_all_with_real_data.py  test_black_scholes.py  test_clean_architecture.py  test_complete_integration.py  test_complete_system.py  test_config.py  test_config_fix.py  test_configuration.py  test_core_foundation.py  test_dashboard_fixes.py  test_dashboard_imports.py  test_data_collection.py  test_data_package_fix.py  test_database.py  test_deribit_fix.py  test_financial_calculations.py  test_greeks_calculator.py  test_mongodb_connection.py  test_options_chain.py  test_real_data_integration.py  test_summary.json  test_time_calculation_fix.py  test_time_utils.py  test_week3_analytics.py  test_week4_risk_analytics.py  test_week4_step4_advanced_analytics.py
(+9 files in other folders)
