[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qortfolio-v2"
version = "0.1.0"
description = "Quantitative Finance Platform for Options Analytics and Volatility Modeling"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"

authors = [
  { name = "Mhmd Fasihi", email = "mhmd.fasihi@gmail.com" }
]
keywords = ["quantitative finance", "options", "volatility", "crypto", "portfolio"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.23.0",
  "yfinance",
  "streamlit",
  "scikit-learn",
  "matplotlib",
  "plotly",
  "requests"
]

[project.urls]
"Bug Reports" = "https://github.com/MhmdFasihi/qortfolio-v2/issues"
"Source" = "https://github.com/MhmdFasihi/qortfolio-v2"
"Documentation" = "https://github.com/MhmdFasihi/qortfolio-v2/wiki"

[project.scripts]
qortfolio = "src.dashboard.main:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "mypy>=1.4.0",
  "flake8>=6.0.0",
  "pre-commit>=3.0.0"
]
jupyter = [
  "jupyter>=1.0.0",
  "ipykernel>=6.24.0",
  "notebook>=6.5.0"
]
docs = [
  "sphinx>=7.1.0",
  "sphinx-rtd-theme>=1.3.0"
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]