[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qortfolio-v2"
version = "2.0.0"
description = "Professional Quantitative Finance Platform with Crypto Options Analytics"
authors = [
    {name = "Seyed Mohammad Hossein Fasihi", email = "mhmd.fasihi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "AGPLv3"}

[project.urls]
Homepage = "https://github.com/yourusername/qortfolio-v2"
Documentation = "https://github.com/yourusername/qortfolio-v2/docs"
Repository = "https://github.com/yourusername/qortfolio-v2"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]
